--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
 			<div class="bounds" style="background-color: blue">
 				<div class="draggable"></div>
 				<div class="draggable" style="background-color: yellow"></div>
+				<div class="draggable" style="background-color: orange"></div>
+				<div class="draggable"></div>
 				<div class="draggable" style="background-color: yellow"></div>
+				<div class="draggable" style="background-color: orange"></div>
+				<div class="draggable"></div>
+				<div class="draggable" style="background-color: yellow"></div>
+				<div class="draggable" style="background-color: orange"></div>
+				<div class="draggable"></div>
 			</div>
 			<div class="bounds" style="background-color: red"></div>
+			<div class="bounds" style="background-color: pink"></div>
 		</div>
 	</body>
 </html>
