--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
 	<body>
 		<div class="container">
 			<div class="bounds" style="background-color: blue">
-				<div class="draggable"></div>
-				<div class="draggable" style="background-color: yellow"></div>
-				<div class="draggable" style="background-color: orange"></div>
-				<div class="draggable"></div>
-				<div class="draggable" style="background-color: yellow"></div>
-				<div class="draggable" style="background-color: orange"></div>
-				<div class="draggable"></div>
-				<div class="draggable" style="background-color: yellow"></div>
-				<div class="draggable" style="background-color: orange"></div>
-				<div class="draggable"></div>
+				<div class="draggable">2</div>
+			</div>
+			<div class="bounds" style="background-color: blue">
+				<div class="draggable">1</div>
+				<div class="draggable">3</div>
+				<div class="draggable">4</div>
 			</div>
 			<div class="bounds" style="background-color: red"></div>
 			<div class="bounds" style="background-color: pink"></div>
