--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="bounds" style="background-color: blue">
+			<div class="bounds" style="background-color: burlywood">
 				<div class="draggable">2</div>
 			</div>
-			<div class="bounds" style="background-color: blue">
-				<div class="draggable">1</div>
-				<div class="draggable">3</div>
-				<div class="draggable">4</div>
+			<div class="bounds" style="background-color: burlywood">
+				<div class="draggable" style="background-color: brown">1</div>
+				<div class="draggable" style="background-color: green">3</div>
+				<div class="draggable" style="background-color: yellow">4</div>
 			</div>
-			<div class="bounds" style="background-color: red"></div>
-			<div class="bounds" style="background-color: pink"></div>
+			<div class="bounds" style="background-color: burlywood"></div>
+			<div class="bounds" style="background-color: burlywood"></div>
 		</div>
 	</body>
 </html>
